--- a/_examples/manifests/microservices/x-echo-jp/development/Service/service.yaml
+++ b/_examples/manifests/microservices/x-echo-jp/development/Service/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: service
+  # namespace: hoge # not specified (hoge is invalid value even if specified)
   labels:
     app: redis
     tier: backend
