--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,20 @@
 name: test
+
 on:
-  - push
+  push:
+    paths:
+    - '**.go'
+    - '.github/workflows/test.yml'
+
 jobs:
   test:
-    name: Run test workflow
     runs-on: ubuntu-latest
     steps:
-    - name: Setup Go
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.13
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Test
-      run: go test -v -race ./...
+      - name: Setup Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.13
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Test
+        run: go test -v -race ./...
